samples/bookinfo/kube/route-rule-all-v1.yaml
apiVersion: config.istio.io/v1alpha2
kind: DestinationRule
metadata:
  name: reviews-default
spec:
  name: reviews
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
---
apiVersion: config.istio.io/v1alpha2
kind: DestinationRule
metadata:
  name: details-default
spec:
  name: details
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: config.istio.io/v1alpha2
kind: DestinationRule
metadata:
  name: ratings-default
spec:
  name: ratings
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2 # FIXME: is there a vanilla v2?
      labels:
        version: v2
    - name: v2-mysql # FIXME: why not use multiple labels?
      labels:
        version: v2-mysql
    - name: v2-mysql-vm
      labels:
        version: v2-mysql-vm
